@@ -1,3 +1,8 @@
+2013-02-26  Hani Benhabiles <hani.benhabiles@greenbone.net>
+
+	* src/gsad_omp.c (get_info): Return error message when an invalid
+	info_type is provided. Update documentation and error messages.
+
 2013-02-25  Matthew Mundell <matthew.mundell@greenbone.net>
 
 	* src/html/omp.xsl (prognostic-description): Move into template section.
